Style
*annotations added;
*userinfo fchanged rom array to pair;
*tests changed